fixed song timer not showing

--- a/src/Playlist.css
+++ b/src/Playlist.css
@@ -25,8 +25,7 @@
     padding: 0 .5rem 0 .5rem;
     color: white;
     position: fixed;
-    top: 3rem;
-    left: 4.7rem;
+    margin: 70rem 0 0 8rem;
     background-color: rgba(0, 0, 0, 0.734);
 
 
@@ -37,7 +36,7 @@
     padding: 0 .5rem 0 .5rem;
     color: white;
     position: fixed;
-    margin: 4.6rem 0 0 4.5rem;
+    margin: 70rem 0 0 8rem;
     background-color: rgba(0, 0, 0, 0.734);
 
 }
